# goit-python-web-hw-07

./: Readme.md  alembic.ini  connect_db.py  constants.py  main.py  models.py  pyproject.toml  seeds.py
alembic/versions/: c001a9b671e9_initial.py
