[tool.poetry]
name = "HW7"
version = "1.0"
description = "Example"
authors = ["UstymenkoOB <50136631+UstymenkoOB@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
